<resources>
    <string name="app_name">Lingua</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lesson_fragment">Lesson Fragment</string>
    <string name="exercises_completed">Exercises completed</string>
    <string name="progress">Progress\n</string>
    <string name="study_plan">Study Plan</string>
    <string name="today_s_exercise">Today\'s exercise</string>
    <string name="profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="icon">Icon</string>
    <string name="arrow">Arrow</string>
    <string name="save">Save</string>
    <string name="title_language_level">Language Level</string>
    <string name="i_want_to_learn">I want to learn</string>
    <string name="change_language_arrow">Change language</string>
    <string name="english">English</string>
    <string name="app_language_flag">Flag</string>
    <string name="app_language">App Language</string>
    <string name="languages">Languages</string>
    <string name="current_learning_language">Current learning language</string>
    <string name="learning_language_flag">learning flag</string>
    <string name="title_languages">Languages</string>
    <string name="exercises">Exercises</string>
    <string name="to_do_list">To Do List</string>
    <string name="select_language">Change App Language</string>
</resources>