<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lingua.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.lingua.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.lingua.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_language_level"
        android:name="com.example.lingua.ui.settings.LanguageLevelFragment"
        android:label="@string/title_language_level"
        tools:layout="@layout/activity_language_level" />

    <fragment
        android:id="@+id/navigation_languages"
        android:name="com.example.lingua.ui.settings.LanguagesFragment"
        android:label="@string/title_languages"
        tools:layout="@layout/fragment_languages" />
</navigation>