<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/DarkGreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginTop="-10dp"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">

        <ImageView
            android:id="@+id/learning_language_flag"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/learning_language_flag"
            android:src="@drawable/gb_flag" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <TextView
                style="@style/TextStyle.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_learning_language"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/learning_language_text"
                style="@style/TextStyle.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_language"
            style="@style/TextStyle.BodyLarge"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/app_language_container"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:focusable="true"
            android:orientation="horizontal"
            android:background="@drawable/rounded_corners"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/app_language_flag"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/gb_flag"
                android:contentDescription="@string/app_language_flag" />

            <TextView
                android:id="@+id/app_language_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/english"
                android:textSize="24sp"
                android:textColor="@color/white"
                style="@style/TextStyle.BodyLarge" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="125dp"
                android:contentDescription="@string/change_language_arrow"
                android:src="@drawable/ic_arrow_down" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_want_to_learn"
            style="@style/TextStyle.BodyLarge"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/learning_options_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textSize="20sp"
        style="@style/TextStyle.BodyLarge"
        android:textColor="@color/white"
        android:background="@drawable/button" />
</LinearLayout>
